# ebg

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.github/workflows/: docker-release.yml  release-plz.yml  rust.yml  semgrep.yml
doc/: Site.toml  categories.md  index.md  site-config.md  style.css  themes.md  wayback.md
doc/templates/: base.html  category.html
src/: cli.rs  command_line.rs  diagnostics.rs  generate.rs  generator.rs  index.rs  lib.rs  main.rs  markdown.rs  page.rs  renderer.rs  serve.rs  site.rs  templates.rs  wayback.rs
src/cli/: about.rs  build.rs  list.rs  mod.rs  new_post.rs  wayback.rs
src/generator/: atom.rs  mod.rs  sitemap.rs  theme.rs
src/index/: links.rs  mod.rs  page.rs  wayback_links.rs
src/index/page/: mod.rs  parsing_helpers.rs
src/markdown/: code.rs  footnotes.rs  mod.rs
src/page/: mod.rs
src/renderer/: markdown.rs  mod.rs
src/renderer/markdown/: anchors.rs  code.rs  footnotes.rs  mod.rs  source_links.rs  wayback_indicators.rs
src/wayback/: api.rs  mod.rs
test/data/html/: index.html
