[package]
name = "ebg"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/eholk/ebg"
description = "Eric's Blog Generator, a simple static site generator."
authors = ["Eric Holk <eric@theincredibleholk.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-walkdir = "0.2.0"
bumpalo = "3.14.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive"] }
email-address-parser = "2.0.0"
futures = "0.3.30"
futures-concurrency = "7.4.3"
hyper = { version = "0.14.28", features = ["http1", "server", "tcp"] }
indicatif = "0.17.7"
miette = { version = "5.10.0", features = ["fancy"] }
notify = "6.1.1"
pathdiff = "0.2.1"
pulldown-cmark = "0.9.3"
quick-xml = "0.31.0"
rayon = "1.8.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.168", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
slug = "0.1.5"
syntect = "5.1.0"
tempfile = "3.8.1"
tera = "1.19.1"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
