[package]
name = "ebg"
version = "0.4.2-dev"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/eholk/ebg"
description = "Eric's Blog Generator, a simple static site generator."
authors = ["Eric Holk <eric@theincredibleholk.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-walkdir = "1.0.0"
bumpalo = "3.16.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
email-address-parser = "2.0.0"
futures = "0.3.30"
futures-concurrency = "7.6.0"
hyper = { version = "0.14.28", features = ["http1", "server", "tcp"] }
indicatif = "0.17.8"
miette = { version = "7.2.0", features = ["fancy"] }
notify = "6.1.1"
open = "5.1.2"
pathdiff = "0.2.1"
pulldown-cmark = "0.10.2"
quick-xml = "0.31.0"
rayon = "1.10.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
slug = "0.1.5"
syntect = "5.2.0"
tempfile = "3.10.1"
tera = "1.19.1"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter"] }
url = "2.5.0"
