[package]
name = "ebg"
version = "0.5.4"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/eholk/ebg"
description = "Eric's Blog Generator, a simple static site generator."
authors = ["Eric Holk <eric@theincredibleholk.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
email-address-parser = "2"
futures = "0.3"
futures-concurrency = "7"
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
indicatif = "0.18"
miette = { version = "7", features = ["fancy"] }
notify = "8"
open = "5"
pathdiff = "0.2"
pulldown-cmark = "0.13"
quick-xml = "0.37"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
slug = "0.1"
syntect = "5"
tempfile = "3"
tera = "1"
thiserror = "2"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1", features = ["fs"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter"] }
url = "2"
walkdir = "2"
